Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.3
	 * Save:	8
	 * Network:	11

	Android		28
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.3

	Online Mini Lobby added to FlashGUI and SwingGUI
	Brazilian Portuguese added by Ricardo Gomes Ponce
	much more info added to the Testing tab in SwingGUI
	game.ini has ai.wait property that can be changed

	Android 28 can resign from a online game
	Android 27 do not allow someone to make a mission online game with a map that does not have missions
		   display lobby chat messages more correctly
		   fixed: entering a game half way through a attack, either roll or move armes is not working
		   online play works for everyone
		   fixed: nullpointer in MapStore after updateall if select is clicked
	Android 26 donate button fixed
		   double click on online game fix
		   do not crash on failed to send message for lobby
		   allow user to close game even in battle mode
		   notifications will make sound/vibrate/lights
	Android 25 timeout for turn in multiplayer game
	Android 24 lib missing in v23
	Android 23 push notifications for online play
		   Grasshopper update to send jpg and not png
		   http.keepAlive=false android hack added
		   savegame for / or \ in name fix
		   nullpointer in desktoppane hack added
		   do not spam logs with known MapServer connections errors
	Android 22 online multiplayer Beta for en_GB users

1.1.1.2

	italian update by Marco Barbarino
	when publishing maps, it checks to see if the map name is already taken
	missions translations update
	when you update to a new version it does not replace the game.ini
	do not give 414 errors on really large numbers of maps
	when loading a cards file into the map editor, the mission text for destroy a player is displayed incorrectly
	fixed: in flashGUI closing the game when a game can be continued does not close the game
	Ukrainian added and russian updated by Oleksandra Spiegler
